<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JUTAAV</string>

    <string name="msg_NO_INTERNET_RESPOND">Please connect the device with internet</string>
    <string name="msg_NO_INTERNET_TITLE">Connection error</string>
    <string name="msg_NO_INTERNET_MSG">We can\’t reach our network right now. Please check your connection.</string>
    <string name="label_close">Close</string>
    <string name="msg_goto_settings">CONNECTION SETTINGS</string>
    <string name="msg_please_wait">Please wait …</string>
    <string name="msg_update_image">Uploading images</string>
    <string name="msg_update_status">Update status</string>
    <string name="msg_speed_check">Checking internet speed</string>
    <string name="msg_server_error">Something went wrong please try again</string>
    <string name="msg_unauthorise_error">Unauthorised Access!</string>

    <string name="noNetworkFound">"You're not connected to the Internet. Please connect and retry." </string>
    <string name="dialog_ok_btn">OK</string>

    <string name="loginlabel1">Sign in/Register</string>
    <string name="loginlabel2">Please enter your mobile\n number to proceed</string>
    <string name="loginlabel3">Mobile Number</string>
    <string name="loginlabel4">Proceed</string>
    <string name="loginlabel5">+91-</string>
    <string name="loginlabel6">Sign In another way <font fgcolor='#2E5BFF'>via email</font></string>
    <string name="loginlabel7">Please enter your credentials to\n proceed</string>
    <string name="loginlabel8">EMAIL ID</string>
    <string name="loginlabel9">Sign In another way <font fgcolor='#2E5BFF'>via OTP</font></string>
    <string name="loginlabel10">john@smith.com</string>
    <string name="loginlabel11">Password</string>
    <string name="loginlabel12">xxxxxx</string>

    <string name="error_login1">Please enter mobile number</string>

    <string name="otplabel1">Please enter your OTP to\n proceed</string>
    <string name="otplabel2">ONE TIME PASSWORD (OTP)</string>
    <string name="error_otp1">Please enter otp</string>

    <string name="signup_orgazinattion1">Please enter your organisation\n name or code to proceed</string>
    <string name="signup_orgazinattion2">ORGANSIATION NAME</string>
    <string name="signup_orgazinattion3">Enter Organisation Name Here</string>
    <string name="signup_orgazinattion4">ORGANISATION CODE</string>
    <string name="signup_orgazinattion5">OR</string>
    <string name="signup_orgazinattion6">Please Tell Us How We Can Address You</string>
    <string name="signup_orgazinattion7">Name</string>

    <string name="workspace_load_label1">Setting up your workspace for you</string>
    <string name="workspace_load_label2">Logging you into your default workplace. You can always change it from your profile settings</string>

    <string name="error_org1">Please enter organization name or code</string>

    <string name="choose_lan_label1">SELECT YOUR PREFERRED LANGUAGE</string>
    <string name="choose_lan_label2">English</string>
    <string name="choose_lan_label3">Hindi</string>
    <string name="choose_lan_label4">En</string>
    <string name="choose_lan_label5">हिंदी</string>

    <string name="txt_link_phonebook_to_app_caps">LINK PHONEBOOK TO JUTAAV\n APP</string>
    <string name="txt_task_completed_title">Task Completed</string>
    <string name="txt_will_take_action_later_big">No, I will take action later</string>

    <string name="txt_task_complete_greet_big">Congratulations on completing the  task!</string>
    <string name="txt_complete_task_dummy">complete 3 more tasks to reach your daily goal</string>

    <string name="txt_help_and_faq_big">Help &amp; FAQ</string>
    <string name="txt_messages_big">Messages</string>
    <string name="txt_my_tasks_big">My Tasks</string>
    <string name="txt_community_big">Community</string>
    <string name="txt_my_profile_big">My Profile</string>

    <string name="str_contact_list">CONTACT LIST</string>
    <string name="str_link_phonebook_now">Link Phonebook Now</string>
    <string name="str_create_list">Create List</string>
    <string name="str_contact_list2">Contact List</string>
    <string name="str_create_broadcast_list_234">Create Broadcast List #234</string>
    <string name="str_share_to_whatsapp_broadcast_list_234">Share to WhatsApp Broadcast list #234</string>
    <string name="str_share_to_whatsApp">Share to WhatsApp</string>

    <string name="str_start_calling">Start Calling</string>
    <string name="str_take_action">Take Action</string>

    <string name="str_enter_name_here">Enter Name Here</string>
    <string name="str_enter_email_here">Enter Email Here</string>
    <string name="str_facebook_id">FACEBOOK ID</string>
    <string name="str_enter_facebook_id_here">Enter Facebook Id Here</string>
    <string name="str_enter_password_here">Enter Password Here</string>
    <string name="str_enter_language_here">Enter Language Here</string>
    <string name="str_language">Language</string>

    <string name="str_link_phonebook_to_jutaav_app">Link Phonebook to Jutaav App</string>
    <string name="txt_add_new_contact_title">Add New Contact</string>
    <string name="txt_first_big">First</string>
    <string name="txt_middle_big">Middle</string>
    <string name="txt_last_big">Last</string>
    <string name="txt_guardian_s_name_title">Guardian’s Name</string>
    <string name="txt_gender_big">Gender</string>
    <string name="txt_select_big">Select</string>
    <string name="txt_date_of_birth_title">Date Of Birth</string>
    <string name="txt_date_of_birth_dummy">25-05-1990</string>
    <string name="txt_relation_with_guardian_big">Relationship With Guardian</string>
    <string name="txt_brother_big">Brother</string>
    <string name="txt_page_big">Page</string>
    <string name="txt_section_big">Section</string>
    <string name="txt_booth_big">Booth</string>
    <string name="txt_booth_type_big">Booth Type</string>
    <string name="txt_save_changes_title">Save Changes</string>
    <string name="str_welcome">Welcome,</string>
    <string name="str_complete_your_profile">Complete Your Profile</string>
    <string name="str_good_job_complete_your_profile">Good job! You updated your profile! Complete these set of tasks to complete your profile.</string>
    <string name="str_state">STATE</string>
    <string name="str_district">DISTRICT</string>
    <string name="str_constituency">CONSTITUENCY</string>
    <string name="str_booth">BOOTH</string>
    <string name="str_update_profile">Update Profile</string>

    <string-array name="array_states">
        <item>Select</item>
        <item>Gujarat</item>
        <item>Rajasthan</item>
        <item>Tamil Nadu</item>
    </string-array>

    <string-array name="array_district">
        <item>Select</item>
        <item>Bharuch</item>
        <item>Surat</item>
        <item>Sanjali</item>
    </string-array>

    <string-array name="array_constituency">
        <item>Select</item>
        <item>Constituency - 1</item>
        <item>Constituency - 2</item>
        <item>Constituency - 3</item>
    </string-array>

    <string-array name="array_booth">
        <item>Select</item>
        <item>Booth - 1</item>
        <item>Booth - 2</item>
        <item>Booth - 3</item>
    </string-array>

    <string-array name="array_gender">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="array_page">
        <item>Select</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="array_section">
        <item>Select</item>
        <item>Section - 1</item>
        <item>Section - 2</item>
        <item>Section - 3</item>
    </string-array>

    <string-array name="array_booth_type">
        <item>Select</item>
        <item>Type - 1</item>
        <item>Type - 2</item>
        <item>Type - 3</item>
    </string-array>

</resources>