<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FFFFFF"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/ivHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:contentDescription="@null"
        android:src="@drawable/splash_txt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/signup_orgazinattion6"
            android:textColor="@color/color_2E384D"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:text="@string/signup_orgazinattion1"
            android:textColor="@color/color_8798AD"
            android:textSize="15sp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/signup_orgazinattion7"
            android:textAllCaps="true"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etOrgName"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/signup_orgazinattion3"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:text="@string/signup_orgazinattion5"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/rounded_login_btn"
            android:text="@string/loginlabel4"
            android:textColor="@color/color_FFFFFF" />
    </LinearLayout>
</RelativeLayout>