<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ChooseLanguageActivity">
    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/splash_txt"
        android:layout_marginTop="30dip"
        >

    </ImageView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_below="@+id/iv_header"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:textColor="@color/color_2E384D"
        android:text="@string/workspace_load_label1">

    </TextView>
    <LinearLayout
        android:id="@+id/ll_english"
        android:layout_width="180dip"
        android:layout_height="70dip"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="30dip"
        android:padding="15dip"
        android:background="@drawable/rounded_choose_lan_btn"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginLeft="10dip"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rounded_choose_lan_btn1"
            android:text="@string/choose_lan_label4">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/choose_lan_label2">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_hindi"
        android:layout_width="180dip"
        android:layout_height="70dip"
        android:layout_below="@id/ll_english"
        android:layout_marginTop="20dip"
        android:padding="15dip"
        android:background="@drawable/rounded_choose_lan_btn"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginLeft="10dip"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rounded_choose_lan_btn1"
            android:text="@string/choose_lan_label5">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/choose_lan_label3">
        </TextView>
    </LinearLayout>
</RelativeLayout>