<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FFFFFF"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/ivBrandLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_txt" />

    <TextView
        android:id="@+id/tvSignInRegister"
        style="@style/onboardingPrimaryTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginlabel1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBrandLogo" />

    <TextView
        android:id="@+id/tvPleaseEnterOTP"
        style="@style/onboardingPrimaryDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center_horizontal"
        android:text="@string/loginlabel2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignInRegister" />

    <TextView
        android:id="@+id/tvMobileNumber"
        style="@style/onboardingInputTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/loginlabel3"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPleaseEnterOTP" />

    <com.jutaav.utils.PrefixEditText
        android:id="@+id/etMobileNumber"
        style="@style/onboardingInputField"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_25"
        android:gravity="center_vertical"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxEms="10"
        android:maxLength="10"
        android:paddingStart="@dimen/dp_15"
        android:paddingTop="@dimen/dp_5"
        android:paddingEnd="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:tag="@string/loginlabel5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMobileNumber" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProceed"
        style="@style/onboardingprimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_25"
        android:padding="@dimen/dp_15"
        android:text="@string/loginlabel4"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMobileNumber" />

    <TextView
        android:id="@+id/tvLoginViaEmail"
        style="@style/onboardingPrimaryDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/loginlabel6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProceed" />

</androidx.constraintlayout.widget.ConstraintLayout>